--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body id="body">
-    <header class="menu" id="menu">
-      <div class="menu__box">
-        <button class="menu__item menu__item-1" id="vols-btn">ВОЛС</button>
-        <button class="menu__item menu__item-2" id="gen5-btn">5G</button>
+    <header class="header">
+      <div class="menu" id="menu">
+        <div class="menu__box">
+          <button class="menu__item menu__item-1" id="vols-btn">ВОЛС</button>
+          <button class="menu__item menu__item-2" id="gen5-btn">5G</button>
+        </div>
       </div>
     </header>
     <div class="container">
